2009-09-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp59/init.c, spintrcritical15/init.c, spintrcritical16/init.c:
	Correct minor issues uncovered on uC5282.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp04/tswitch.c, sp07/system.h, sp07/taskexit.c, sp07/tdelete.c,
	sp07/tstart.c, spfatal_support/init.c, spfatal_support/system.h:
	Eliminate use of deprecated rtems_extension.

2009-09-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp14/asr.c, sp14/sp14.doc, sp14/task1.c, sp14/task2.c: Adjust test to
	run when IO speed varies.

2009-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp43/init.c, sp43/sp43.scn: Minor correction to test case so it hits
	the intended code.

2009-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac: Revert accidentally committed lines.

2009-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac, sp65/init.c: Add new test to exercise very
	simple priority ceiling case that was previously only tested via the
	POSIX API.
	* sp66/.cvsignore, sp66/Makefile.am, sp66/init.c, sp66/sp66.doc,
	sp66/sp66.scn: New files.

2009-09-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp43/Makefile.am, sp43/init.c, sp43/sp43.scn, sp43/system.h: Add test
	for Id which is in range for the object class but not allocated yet.

2009-09-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp46/init.c, sp46/sp46.scn: Fix numbering.

2009-09-07	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* spintrcritical_support/intrcritical.c: Fixed timing rountines.

2009-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spfatal01/spfatal01.scn, spfatal01/testcase.h,
	spfatal02/spfatal02.scn, spfatal02/testcase.h,
	spfatal03/spfatal03.scn, spfatal03/testcase.h,
	spfatal04/spfatal04.scn, spfatal04/testcase.h,
	spfatal05/spfatal05.scn, spfatal05/testcase.h,
	spfatal06/spfatal06.scn, spfatal06/testcase.h,
	spfatal07/spfatal07.scn, spfatal07/testcase.h,
	spfatal08/spfatal08.scn, spfatal08/testcase.h,