@@ -1,6 +1,4 @@
 /*
- *  spmonotonic -- sanity check the rate monotonic manager
- *
  *  COPYRIGHT (c) 1989-2009.
  *  On-Line Applications Research Corporation (OAR).
  *
@@ -75,7 +73,7 @@ rtems_task Init(
   puts("\n\n*** TEST 33 ***");
 
   /* Check bad argument cases */
-  puts( "Delete barrier with bad id" );
+  puts( "rtems_barrier_delete - bad id - INVALID_ID" );
   status = rtems_barrier_delete( 100 );
   fatal_directive_status(
     status,
@@ -83,7 +81,7 @@ rtems_task Init(
     "rtems_barrier_delete did not return RTEMS_INVALID_ID"
   );
 
-  puts( "Release barrier with bad id" );
+  puts( "rtems_barrier_release - bad id - INVALID_ID" );
   status = rtems_barrier_release( 100, &released );
   fatal_directive_status(
     status,
@@ -91,7 +89,7 @@ rtems_task Init(
     "rtems_barrier_release did not return RTEMS_INVALID_ID"
   );
 
-  puts( "Wait on barrier with bad id" );
+  puts( "rtems_barrier_wait - bad id - INVALID_ID" );
   status = rtems_barrier_wait( 100, 10 );
   fatal_directive_status(
     status,
@@ -110,13 +108,32 @@ rtems_task Init(
     "rtems_barrier_create did not return RTEMS_INVALID_NUMBER"
   );
 
+  /* create barrier with bad name */
+  puts( "rtems_barrier_create - bad name - INVALID_NAME" );
+  status = rtems_barrier_create(
+    0, RTEMS_BARRIER_AUTOMATIC_RELEASE, 1, &Barrier);
+  fatal_directive_status(
+    status,
+    RTEMS_INVALID_NAME,
+    "rtems_barrier_create did not return RTEMS_INVALID_NAME"
+  );
+
+  /* create barrier with bad id return address */
+  puts( "rtems_barrier_create - NULL barrier ID - INVALID_ADDRESS" );
+  status = rtems_barrier_create(name, RTEMS_BARRIER_AUTOMATIC_RELEASE, 1, NULL);
+  fatal_directive_status(
+    status,
+    RTEMS_INVALID_ADDRESS,
+    "rtems_barrier_create did not return RTEMS_INVALID_ADDRESS"
+  );
+
   /* Create barrier */
-  puts( "Create barrier" );
+  puts( "rtems_barrier_create - OK" );
   status = rtems_barrier_create( name, RTEMS_DEFAULT_ATTRIBUTES, 0, &Barrier );
   directive_failed(status, "rtems_barrier_create");
 
   /* Check for creating too many */
-  puts( "Create too many barriers" );
+  puts( "rtems_barrier_create - too many" );
   status = rtems_barrier_create( name, RTEMS_DEFAULT_ATTRIBUTES, 0, &Barrier );
   fatal_directive_status(
     status,
@@ -138,6 +155,15 @@ rtems_task Init(
     status,
     RTEMS_TIMEOUT,
     "rtems_barrier_wait did not timeout"
+  );
+
+  /* Release with bad return pointer */
+  puts( "rtems_barrier_release - NULL return count - INVALID_ADDRESS" );
+  status = rtems_barrier_release( Barrier, NULL );
+  fatal_directive_status(
+    status,
+    RTEMS_INVALID_ADDRESS,
+    "rtems_barrier_release bad return pointer"
   );
 
   /* Release no tasks */
@@ -208,7 +234,7 @@ rtems_task Init(
   status = rtems_task_wake_after( rtems_clock_get_ticks_per_second() );
   directive_failed(status, "rtems_task_wake_after");
 
-  puts( "Delete barrier" );
+  puts( "rtems_barrier_delete - OK" );
   status = rtems_barrier_delete( Barrier );
   directive_failed(status, "rtems_barrier_delete");
 
@@ -217,7 +243,7 @@ rtems_task Init(
   directive_failed(status, "rtems_task_wake_after");
 
   /* Create barrier with automatic release */
-  puts( "Create barrier" );
+  puts( "rtems_barrier_create - OK" );
   status = rtems_barrier_create(
     name, RTEMS_BARRIER_AUTOMATIC_RELEASE, CONFIGURE_MAXIMUM_TASKS-1, &Barrier
   );
